DotNetFrameworkProject_CE040_CE087/Tour_Management/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tour-management-service
  namespace: tour-management
  labels:
    app: tour-management
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: tour-management
