DotNetFrameworkProject_CE040_CE087/Tour_Management/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tour-management-ingress
  namespace: tour-management
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: tour-management.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tour-management-service
            port:
              number: 80
